--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -211,6 +211,7 @@
       // Capture the form inputs
       $("#submit").on("click", function(event) {
         event.preventDefault();
+        console.log("Submit button clicked.")
   
         // Form validation
         function validateForm() {
@@ -249,10 +250,10 @@
               $("#q10").val()
             ]
           };
-  
+          console.log(userData);
           // AJAX post the data to the friends API.
           $.post("/api/friends", userData, function(data) {
-  
+            console.log(data);
             // Grab the result from the AJAX post so that the best match's name and photo are displayed.
             $("#match-name").text(data.name);
             $("#match-img").attr("src", data.photo);
