--- a/app/public/home.html
+++ b/app/public/home.html
@@ -28,7 +28,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/tables">API Friends List</a> | <a href="https://github.com/Melissajwomack/friend-finder">GitHub Repo</a>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/Melissajwomack/friend-finder">GitHub Repo</a>
       </div>
     </footer>
 
