--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -105,7 +105,7 @@
   
   
       <h3><strong>Question 7</strong></h3>
-      <h4>Goatees are the best stye of facial hair.</h4>
+      <h4>Goatees are the best style of facial hair.</h4>
       <select class="chosen-select" id="q7">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
@@ -138,7 +138,7 @@
       </select>
   
       <h3><strong>Question 10</strong></h3>
-      <h4>You've been refered to as the "girl/boy next door".</h4>
+      <h4>You've been refered to as "the girl/boy next door".</h4>
       <select class="chosen-select" id="q10">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
@@ -176,7 +176,7 @@
           </div>
           <div class="modal-body">
             <h2 id="match-name"></h2>
-            <img id="match-img" src="" alt="Match Image">
+            <img id="match-img" src="" alt="Match Image" style="width:250px">
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
