--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -45,7 +45,7 @@
       </select>
   
       <h3><strong>Question 2</strong></h3>
-      <h4>Moonwalking ability is must.</h4>
+      <h4>Moonwalking ability is a must.</h4>
       <select class="chosen-select" id="q2">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
