--- a/app/public/home.html
+++ b/app/public/home.html
@@ -16,7 +16,7 @@
     <div class="jumbotron">
       <h1><span class="fa fa-users"></span> Friend Finder </h1>
       <hr>
-      <h2>Answer a Few Questions</h2>
+      <h2>Answer a Few Questions...</h2>
       <h2>Then find the friend with the greatest compatibility!</h2>
       <br>
 
