--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -21,7 +21,7 @@
 
     <div class="container">
   
-      <h2>Survey Questions</h2>
+      <h1>Survey Questions</h1>
       <hr>
   
       <h3><strong>About You</strong></h3>
@@ -32,7 +32,8 @@
       <input type="text" id="photo" class="form-control" required="">
   
       <hr>
-  
+      <h3>On a scale of 1-5 (1 meaning strongly disagree and 5 meaning strongly agree), how much does the statement apply to you?</h3>
+      <hr>
       <h3><strong>Question 1</strong></h3>
       <h4>You're totally into frosted tips.</h4>
       <select class="chosen-select" id="q1">
